Add name and surname

--- a/index.html
+++ b/index.html
@@ -6,5 +6,9 @@
     <title>Berco Andrei - CV/Resume</title>
   </head>
 
-  <body></body>
+  <body>
+    <header>
+        <h1>Berco Andrei</h1>
+    </header>
+  </body>
 </html>
