--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <body>
     <header>
         <h1>Berco Andrei</h1>
+        <p>Contact: andrei.berco@isa.utm.md | Phone: +373 789 429 71 | Location: Chisinau, Moldova</p>
     </header>
   </body>
 </html>
