Add basic information (#3)
* Add name and surname

* Add contact information

--- a/index.html
+++ b/index.html
@@ -6,5 +6,10 @@
     <title>Berco Andrei - CV/Resume</title>
   </head>
 
-  <body></body>
+  <body>
+    <header>
+        <h1>Berco Andrei</h1>
+        <p>Contact: andrei.berco@isa.utm.md | Phone: +373 789 429 71 | Location: Chisinau, Moldova</p>
+    </header>
+  </body>
 </html>
