Add professional description

--- a/index.html
+++ b/index.html
@@ -11,5 +11,9 @@
         <h1>Berco Andrei</h1>
         <p>Contact: andrei.berco@isa.utm.md | Phone: +373 789 429 71 | Location: Chisinau, Moldova</p>
     </header>
+    <section>
+        <h2>About Me</h2>
+        <p>I am a passionate software engineer with expertise in .NET, Python, and Java. I enjoy solving complex problems and continuously improving my skills in backend development.</p>
+      </section>
   </body>
 </html>
