Add education information

--- a/index.html
+++ b/index.html
@@ -14,6 +14,18 @@
     <section>
         <h2>About Me</h2>
         <p>I am a passionate software engineer with expertise in .NET, Python, and Java. I enjoy solving complex problems and continuously improving my skills in backend development.</p>
+    </section>
+    <section>
+        <h2>Education</h2>
+        <ul>
+          <li>
+            <strong>Technical University of Moldova</strong> - Software Engineering (2022 - 2026)
+            <p>Favorite Course: Distributed Systems - I enjoyed learning about Raft and Paxos algorithms.</p>
+          </li>
+          <li>
+            <strong>Liceul Teoretic "George Meniuc"</strong> (2010 - 2022)
+          </li>
+        </ul>
       </section>
   </body>
 </html>
