Add 1st project

--- a/index.html
+++ b/index.html
@@ -24,6 +24,18 @@
           </li>
           <li>
             <strong>Liceul Teoretic "George Meniuc"</strong> (2010 - 2022)
+            <p>Favorite Course: Mathematics.</p>
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h2>Projects</h2>
+        <ul>
+          <li>
+            <strong>Web Application for IT Companies</strong>
+            <p><a href="https://github.com/Kipitokisk/KitKatBackend">View Project</a></p>
+            <p>Technologies: Spring Boot, React, PostgreSQL, Docker, Redis</p>
+            <p>Description: Application to track employees that are on the bench</p>
           </li>
         </ul>
       </section>
