--- a/index.html
+++ b/index.html
@@ -37,6 +37,12 @@
             <p>Technologies: Spring Boot, React, PostgreSQL, Docker, Redis</p>
             <p>Description: Application to track employees that are on the bench</p>
           </li>
+          <li>
+            <strong>Raft Leader Election in C#</strong>
+            <p><a href="https://github.com/KaBoomKaBoom/PR-Labs">View Project</a></p>
+            <p>Technologies: C#, Docker, Distributed Systems</p>
+            <p>Description: Application that simulates the RAFT algorithm</p>
+          </li>
         </ul>
       </section>
   </body>
