Add 3rd project

--- a/index.html
+++ b/index.html
@@ -43,6 +43,12 @@
             <p>Technologies: C#, Docker, Distributed Systems</p>
             <p>Description: Application that simulates the RAFT algorithm</p>
           </li>
+          <li>
+            <strong>DSL for citation generation</strong>
+            <p><a href="https://github.com/KaBoomKaBoom/DSL-for-citation">View Project</a></p>
+            <p>Technologies: Python</p>
+            <p>Description: A domain specific language that generates citations in different formats using AI to extrcat information from a web page</p>
+          </li>
         </ul>
       </section>
   </body>
