--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="author" content="Berco Andrei">
     <title>Berco Andrei - CV/Resume</title>
   </head>
 
@@ -24,6 +25,30 @@
           </li>
           <li>
             <strong>Liceul Teoretic "George Meniuc"</strong> (2010 - 2022)
+            <p>Favorite Course: Mathematics.</p>
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h2>Projects</h2>
+        <ul>
+          <li>
+            <strong>Web Application for IT Companies</strong>
+            <p><a href="https://github.com/Kipitokisk/KitKatBackend">View Project</a></p>
+            <p>Technologies: Spring Boot, React, PostgreSQL, Docker, Redis</p>
+            <p>Description: Application to track employees that are on the bench</p>
+          </li>
+          <li>
+            <strong>Raft Leader Election in C#</strong>
+            <p><a href="https://github.com/KaBoomKaBoom/PR-Labs">View Project</a></p>
+            <p>Technologies: C#, Docker, Distributed Systems</p>
+            <p>Description: Application that simulates the RAFT algorithm</p>
+          </li>
+          <li>
+            <strong>DSL for citation generation</strong>
+            <p><a href="https://github.com/KaBoomKaBoom/DSL-for-citation">View Project</a></p>
+            <p>Technologies: Python</p>
+            <p>Description: A domain specific language that generates citations in different formats using AI to extrcat information from a web page</p>
           </li>
         </ul>
       </section>
