--- a/index.html
+++ b/index.html
@@ -52,5 +52,15 @@
           </li>
         </ul>
       </section>
+      <section>
+        <h2>Skills</h2>
+        <ul>
+          <li>.NET (C#)</li>
+          <li>Python</li>
+          <li>Spring Boot</li>
+          <li>Docker & Kubernetes</li>
+          <li>SQL & NoSQL Databases</li>
+        </ul>
+      </section>
   </body>
 </html>
